# Trading

./: .gitignore  CLAUDE.md  PlanTrading.md  README.md  docker-compose.yml  fix_mt5_ticket_bigint.sql  supabase_migration.sql
backend/: .env.example  Dockerfile  SYNC_INSTRUCTIONS.md  debug_check.py  migrations_initial.sql  pyproject.toml  requirements.txt  run_v1_backtest.py  run_v1_backtest_synthetic.py  sync_mt5_positions.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_bot_config_crash_monitoring.py  003_ohlcv_bars.py
backend/app/: main.py
backend/app/ai_analysis/: llm_client.py  performance_summary.py  risk_review.py  trade_analyzer.py
backend/app/backtesting/: data_loader.py  engine.py  metrics.py  optimizer.py  simulator.py
backend/app/core/: config.py  logging_config.py  middleware.py  rate_limit.py  security.py
backend/app/execution/: execution_engine.py  news_filter.py  news_schedule.json
backend/app/ml/: dataset_builder.py  feature_engineering.py  model_registry.py  model_training.py  optimizer.py  prediction.py  smc_feature_extractor.py
backend/app/models/: __init__.py  audit_log.py  backtest_result.py  bot_config.py  ml_model.py  ohlcv_bar.py  risk_event.py  strategy_config.py  trade.py
backend/app/repositories/: audit_repository.py  trade_repository.py
backend/scripts/: download_historical_data.py  migrate_models_to_storage.py
backend/tests/: conftest.py  test_backtesting.py  test_bias_strategy.py  test_bot_config.py  test_execution_engine.py  test_ml.py  test_risk_manager.py  test_strategies.py
(+82 files in other folders)
